refactor and clean folder code